--- a/notes/worksheet_04_gitika_jha.ipynb
+++ b/notes/worksheet_04_gitika_jha.ipynb
@@ -73,9 +73,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "It will count each step as a unit in distance"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -134,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,14 +176,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['name', 'hello', 'my', 'Bob', 'is', 'Alice']\n",
+      "['Alice', 'hello', 'name', 'Bob', 'my', 'is']\n",
       "[1, 1, 1, 0, 1, 1]\n"
      ]
     }
@@ -202,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,14 +222,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['name', 'hi', 'hello', 'Claude', 'my', 'Bob', 'is', 'Alice']\n"
+      "['Alice', 'hi', 'hello', 'name', 'Claude', 'Bob', 'my', 'is']\n"
      ]
     }
    ],
@@ -246,16 +249,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 0, 1, 0, 1, 0, 1, 1]\n",
-      "[1, 0, 1, 0, 1, 1, 1, 0]\n",
-      "[1, 1, 0, 1, 1, 0, 1, 0]\n"
+      "[1, 0, 1, 1, 0, 0, 1, 1]\n",
+      "[0, 0, 1, 1, 0, 1, 1, 1]\n",
+      "[0, 1, 0, 1, 1, 0, 1, 1]\n"
      ]
     }
    ],
@@ -279,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -332,10 +335,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 1, 0, 0, 0, 0, 0, 0], [0, 0, 1, 1, 0, 0, 0, 0], [0, 0, 0, 1, 1, 1, 1, 1], [1, 1, 0, 1, 1, 0, 1, 1], [0, 0, 1, 0, 0, 1, 0, 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1 = \"hi Alice\"\n",
+    "s2 =  \"hello Claude\"\n",
+    "s3 =  \"Bob my name is Claude\"\n",
+    "s4 =  \"hi Claude my name is Alice\"\n",
+    "s5 =  \"hello Bob\"\n",
+    "corpus = [s1, s2, s3, s4, s5]\n",
+    "all_words = list(set([item for x in corpus for item in x.split()]))\n",
+    "matrix = [[1 if x in s else 0 for x in all_words] for s in corpus]\n",
+    "print(matrix)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -346,10 +367,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rows = 5 , cols = 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"rows =\", len(matrix), \", cols =\", len(matrix[0]))"
+   ]
   },
   {
    "attachments": {},
@@ -361,10 +392,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The most similar ones are:\n",
+      "-> hello Claude \n",
+      "-> hello Bob\n"
+     ]
+    }
+   ],
+   "source": [
+    "# take a large value as we need to adjust this to min\n",
+    "mostSimilar = 1000000\n",
+    "leastOne, leastTwo = -1, -1\n",
+    "for i in range(len(matrix)):\n",
+    "    for j in range(i, len(matrix)):\n",
+    "        if i!= j:\n",
+    "            v1 = matrix[i]\n",
+    "            v2 = matrix[j]\n",
+    "            if(mostSimilar>manhattan_distance(v1, v2)):\n",
+    "                mostSimilar = manhattan_distance(v1, v2)\n",
+    "                leastOne = i\n",
+    "                leastTwo = j\n",
+    "print(\"The most similar ones are:\")\n",
+    "print(\"->\",corpus[leastOne], '\\n->',corpus[leastTwo])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -405,9 +461,22 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Iteration 1:\n",
+    "\n",
+    "Cluster 1 -> 0, .5\n",
+    "Cluster 2 -> 1.5, 2, 6, 6.5, 7 \n",
+    "\n",
+    "Iteration 2:\n",
+    "New centroids = [0.25, 11.5]\n",
+    "Cluster 1 -> 0, .5\n",
+    "Cluster 2 -> 1.5, 2, 6, 6.5, 7 \n",
+    "\n",
+    "They will never converge"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -417,14 +486,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "source": [
+    "A way to evaluate the cost Function is is the measure of how different far the points are from the centroid. More the cost function, lesser optimal it is."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -434,9 +501,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "As shown in example a, it heavily depends on where we put the initial centroids as they would result in completely different clusters."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -446,9 +516,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Lloyd's algorithm doesn't always converge. There can be a case where the centroids remain in the same place but the clusters change between themselves in each iteration.\n",
+    "When this happens, it results in an infinite loop and the algorithm never converges."
+   ]
   }
  ],
  "metadata": {
