--- a/worksheets/worksheet_04.ipynb
+++ b/worksheets/worksheet_04.ipynb
@@ -1,14 +1,13 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Worksheet 04\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Jiahang Li\n",
+    "UID: U00295086\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -31,7 +30,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "d is dimensions, p is the degree of the Minkowski metric\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -43,10 +44,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Euclidean distance and the Manhattan distance.\n"
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -63,7 +65,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "More and more close to 1.\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,7 +79,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "No. for A(0,0), B(1,0) C(0,1), D(B,C) is $2^{1/p}$ which is greater than 2. So distance from B to C is greater than from B to A than to C. This is against triangle attribute."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -87,7 +93,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Use cosine similarity over Euclidean distance to measure the similarity between two vectors in a high-dimensional space, and the magnitude of the vectors is not important.\n",
+    "Use Euclidean distance to measure the straight line distance between two points in a multi-dimensional space."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,10 +108,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Jaccard distance accounts for the number of items in each set and the number of items they have in common, while the Manhattan distance only accounts for the absolute differences between the elements of the sets.\n"
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -113,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +153,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -181,10 +190,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "corpus = [s1, s2]\n",
     "s3 = \"hi my name is Claude\"\n",
     "corpus.append(s3)"
    ]
@@ -198,13 +208,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['is', 'hi', 'Bob', 'name', 'hello', 'Claude', 'my', 'Alice']\n",
+      "[1, 0, 0, 1, 1, 0, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_words = list(set([item for x in corpus for item in x.split()]))\n",
+    "print(all_words)\n"
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -213,10 +234,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 0, 0, 1, 1, 0, 1, 1]\n",
+      "[1, 0, 1, 1, 1, 0, 1, 0]\n",
+      "[1, 1, 0, 1, 0, 1, 1, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "v1 = [1 if x in s1 else 0 for x in all_words]\n",
+    "print(v1)\n",
+    "\n",
+    "v2 = [1 if x in s2 else 0 for x in all_words]\n",
+    "print(v2)\n",
+    "\n",
+    "\n",
+    "v3 = [1 if x in s3 else 0 for x in all_words]\n",
+    "print(v3)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -227,10 +268,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.4142135623730951\n",
+      "2.0\n",
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def mdistance(v1, v2):\n",
+    "    vec1 = np.array(v1)\n",
+    "    vec2 = np.array(v2)\n",
+    "    distance= np.sqrt(np.sum(np.square(vec1-vec2)))\n",
+    "    return distance\n",
+    "\n",
+    "print(mdistance(v1,v2))\n",
+    "print(mdistance(v1,v3))\n",
+    "print(mdistance(v2,v3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "v1 and v2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -252,10 +322,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['is', 'hi', 'Bob', 'name', 'hello', 'Claude', 'my', 'Alice']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 1, 0, 0, 0, 0, 0, 1],\n",
+       " [0, 0, 0, 0, 1, 1, 0, 0],\n",
+       " [1, 0, 1, 1, 0, 1, 1, 0],\n",
+       " [1, 1, 0, 1, 0, 1, 1, 1],\n",
+       " [0, 0, 1, 0, 1, 0, 0, 0]]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1 = \"hi Alice\"\n",
+    "s2 = \"hello Claude\"\n",
+    "s3 = \"Bob my name is Claude\"\n",
+    "s4 = \"hi Claude my name is Alice\"\n",
+    "s5 = \"hello Bob\"\n",
+    "\n",
+    "l = [s1, s2, s3, s4, s5]\n",
+    "\n",
+    "all_words = list(set([item for x in l for item in x.split()]))\n",
+    "print(all_words)\n",
+    "\n",
+    "m = []\n",
+    "for s in l:\n",
+    "    m.append([1 if x in s else 0 for x in all_words])\n",
+    "m"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -266,13 +374,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(m))\n",
+    "print(len(m[0]))"
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -281,10 +400,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 4\n",
+      "1.4142135623730951\n"
+     ]
+    }
+   ],
+   "source": [
+    "min_dis = 10000000\n",
+    "idx1 = 0\n",
+    "idx2 = 0\n",
+    "\n",
+    "for i in range(len(m)):\n",
+    "    for j in range(len(m)):\n",
+    "        if i != j and mdistance(m[i], m[j]) < min_dis:\n",
+    "            min_dis = mdistance(m[i], m[j])\n",
+    "            idx1 = i\n",
+    "            idx2 = j\n",
+    "\n",
+    "print(idx1, idx2)\n",
+    "print(min_dis)   "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -292,7 +434,6 @@
    "source": []
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -327,7 +468,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. 0 is assigned 0 and 0.5, 2 is assigned others[1.5, 2, 6, 6.5, 7].\n",
+    "2. centers are 0.25 and 4.6\n",
+    "3. then clusters will be [0, 0.5, 1.5, 2] and [6, 6.5, 7]\n",
+    "4. centers are 1 and 6.5\n",
+    "5. then clusters are [0, 0.5, 1.5, 2] and [6, 6.5, 7], which is the final results."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -339,7 +486,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The sum of squared errors of each sample from the center point of the cluster to which it belongs"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -351,7 +500,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "It depends on the initialization."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -363,12 +514,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Lloyd's algorithm is guaranteed to converge because it is a greedy algorithm that keeps decreasing the value of objective function. However, it may only converge to a local minimum."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -382,9 +535,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (main, Dec  7 2022, 00:00:00) [GCC 12.2.1 20221121 (Red Hat 12.2.1-4)]"
+   "version": "3.7.11"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
