--- a/worksheets/worksheet_05.ipynb
+++ b/worksheets/worksheet_05.ipynb
@@ -110,7 +110,7 @@
     "\n",
     "|   | A | B | C | D | E |\n",
     "|---|---|---|---|---|---|\n",
-    "| A | 0 | $\\sqrt{2}$|   |   |   |\n",
+    "| A | 0 |$\\sqrt{2}$|3|1|$2\\sqrt{2}$|\n",
     "| B |$\\sqrt{2}$| 0 |   |   |   |\n",
     "| C |   |   | 0 |   |   |\n",
     "| D |   |   |   | 0 |   |\n",
