--- a/worksheets/worksheet_05.ipynb
+++ b/worksheets/worksheet_05.ipynb
@@ -111,10 +111,10 @@
     "|   | A | B | C | D | E |\n",
     "|---|---|---|---|---|---|\n",
     "| A | 0 |$\\sqrt{2}$|3|1|$2\\sqrt{2}$|\n",
-    "| B |$\\sqrt{2}$| 0 |   |   |   |\n",
-    "| C |   |   | 0 |   |   |\n",
-    "| D |   |   |   | 0 |   |\n",
-    "| E |   |   |   |   | 0 |"
+    "| B |$\\sqrt{2}$| 0 |$\\sqrt{5}$|1|$\\sqrt{2}$|\n",
+    "| C |3|$\\sqrt{5}$| 0 |$\\sqrt{10}$|$\\sqrt{5}$|\n",
+    "| D |1|1|$\\sqrt{10}$| 0 |$\\sqrt{5}$|\n",
+    "| E |$2\\sqrt{2}$|$\\sqrt{2}$|$\\sqrt{5}$|$\\sqrt{5}$| 0 |"
    ]
   },
   {
