--- a/worksheets/worksheet_05.ipynb
+++ b/worksheets/worksheet_05.ipynb
@@ -123,12 +123,12 @@
    "source": [
     "Step 2\n",
     "\n",
-    "|   |   |   |   |   |\n",
+    "|   |A&D| B | C | E |\n",
     "|---|---|---|---|---|\n",
-    "|   | 0 |   |   |   |\n",
-    "|   |   | 0 |   |   |\n",
-    "|   |   |   | 0 |   |\n",
-    "|   |   |   |   | 0 |"
+    "|A&D| 0 | 1 | 3 |$\\sqrt{5}$|\n",
+    "| B | 1 | 0 |$\\sqrt{5}$|$\\sqrt{2}$|\n",
+    "| C | 3 |$\\sqrt{5}$| 0 |$\\sqrt{5}$|\n",
+    "| E |$\\sqrt{5}$|$\\sqrt{2}$|$\\sqrt{5}$| 0 |"
    ]
   },
   {
