--- a/worksheets/worksheet_05.ipynb
+++ b/worksheets/worksheet_05.ipynb
@@ -137,11 +137,11 @@
    "source": [
     "Step 3\n",
     "\n",
-    "|   |   |   |   |\n",
+    "|   |A&B&D| C | E |\n",
     "|---|---|---|---|\n",
-    "|   | 0 |   |   |\n",
-    "|   |   | 0 |   |\n",
-    "|   |   |   | 0 |"
+    "|A&B&D| 0 |$\\sqrt{5}$|$\\sqrt{2}$|\n",
+    "| C |$\\sqrt{5}$| 0 |$\\sqrt{5}$|\n",
+    "| E |$\\sqrt{2}$|$\\sqrt{5}$| 0 |"
    ]
   },
   {
@@ -150,10 +150,10 @@
    "source": [
     "Step 4\n",
     "\n",
-    "|   |   |   |\n",
+    "|   |A&B&D&E| C |\n",
     "|---|---|---|\n",
-    "|   | 0 |   |\n",
-    "|   |   | 0 |"
+    "|A&B&D&E| 0 |$\\sqrt{5}$|\n",
+    "| C |$\\sqrt{5}$| 0 |"
    ]
   },
   {
