--- a/worksheets/worksheet_05.ipynb
+++ b/worksheets/worksheet_05.ipynb
@@ -172,13 +172,14 @@
    "source": [
     "Step 1\n",
     "\n",
+    "\n",
     "|   | A | B | C | D | E |\n",
     "|---|---|---|---|---|---|\n",
-    "| A | 0 |   |   |   |   |\n",
-    "| B |   | 0 |   |   |   |\n",
-    "| C |   |   | 0 |   |   |\n",
-    "| D |   |   |   | 0 |   |\n",
-    "| E |   |   |   |   | 0 |"
+    "| A | 0 |$\\sqrt{2}$|3|1|$2\\sqrt{2}$|\n",
+    "| B |$\\sqrt{2}$| 0 |$\\sqrt{5}$|1|$\\sqrt{2}$|\n",
+    "| C |3|$\\sqrt{5}$| 0 |$\\sqrt{10}$|$\\sqrt{5}$|\n",
+    "| D |1|1|$\\sqrt{10}$| 0 |$\\sqrt{5}$|\n",
+    "| E |$2\\sqrt{2}$|$\\sqrt{2}$|$\\sqrt{5}$|$\\sqrt{5}$| 0 |\n"
    ]
   },
   {
@@ -187,12 +188,12 @@
    "source": [
     "Step 2\n",
     "\n",
-    "|   |   |   |   |   |\n",
+    "|   | A | B | C&D | E |\n",
     "|---|---|---|---|---|\n",
-    "|   | 0 |   |   |   |\n",
-    "|   |   | 0 |   |   |\n",
-    "|   |   |   | 0 |   |\n",
-    "|   |   |   |   | 0 |"
+    "| A | 0 | $\\sqrt{2}$ | 3 | $\\sqrt{2}$ |\n",
+    "| B | $\\sqrt{2}$ | 0 | $\\sqrt{5}$ | $\\sqrt{2}$ |\n",
+    "| C&D | 3 | $\\sqrt{5}$ | 0 | $\\sqrt{5}$ |\n",
+    "| E | $\\sqrt{2}$ | $\\sqrt{2}$ | $\\sqrt{5}$ | 0 |"
    ]
   },
   {
