--- a/worksheets/worksheet_05.ipynb
+++ b/worksheets/worksheet_05.ipynb
@@ -190,10 +190,10 @@
     "\n",
     "|   | A | B | C&D | E |\n",
     "|---|---|---|---|---|\n",
-    "| A | 0 | $\\sqrt{2}$ | 3 | $\\sqrt{2}$ |\n",
+    "| A | 0 | $\\sqrt{2}$ | 3 | $2\\sqrt{2}$ |\n",
     "| B | $\\sqrt{2}$ | 0 | $\\sqrt{5}$ | $\\sqrt{2}$ |\n",
     "| C&D | 3 | $\\sqrt{5}$ | 0 | $\\sqrt{5}$ |\n",
-    "| E | $\\sqrt{2}$ | $\\sqrt{2}$ | $\\sqrt{5}$ | 0 |"
+    "| E | $2\\sqrt{2}$ | $\\sqrt{2}$ | $\\sqrt{5}$ | 0 |"
    ]
   },
   {
@@ -202,11 +202,11 @@
    "source": [
     "Step 3\n",
     "\n",
-    "|   |   |   |   |\n",
+    "|   | A&C&D | B | E |\n",
     "|---|---|---|---|\n",
-    "|   | 0 |   |   |\n",
-    "|   |   | 0 |   |\n",
-    "|   |   |   | 0 |"
+    "| A&C&D | 0 | $\\sqrt{5}$ | $2\\sqrt{2}$ |\n",
+    "| B | $\\sqrt{5}$ | 0 | $\\sqrt{2}$ |\n",
+    "| E | $2\\sqrt{2}$ | $\\sqrt{2}$ | 0 |"
    ]
   },
   {
@@ -215,10 +215,10 @@
    "source": [
     "Step 4\n",
     "\n",
-    "|   |   |   |\n",
+    "|   | A&E&C&D | B |\n",
     "|---|---|---|\n",
-    "|   | 0 |   |\n",
-    "|   |   | 0 |"
+    "| A&E&C&D | 0 |  $\\sqrt{5}$  |\n",
+    "| B |  $\\sqrt{5}$  | 0 |"
    ]
   }
  ],
