--- a/worksheets/worksheet_04.ipynb
+++ b/worksheets/worksheet_04.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -31,7 +30,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Minkowski distance is the generalized version of eucledian distance. Parameter d is the dimension of the space, and p is the power and root used when finding the distance between two points, akin to pythagorean theorem lookin' eucledian distance where we're used to p=2. Manhattan distance is when p=1."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -43,10 +44,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Colloquially, the Manhattan distance only counts lines along the grid as the shortest distance, rather than diagonals."
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -63,7 +65,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Distances between diagonals (0,0 and 1,1) approach 1, the unit circle becomes a square. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,7 +79,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "No because\n",
+    "\n",
+    "D(B, A) = D(A, C)\n",
+    "\n",
+    "D(B, C) = 2^(1/p)\n",
+    "\n",
+    "This violates the triangle inequality of our distance function definition, because going through a third point is shorter than directly."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -87,7 +99,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "When you care more about direction rather than the objective difference, you use the cosine since you're measuring angle. IE compare the abstract of a paper w the paper itself; magnitude is guarenteed to be different but they should have the same genersal topic ie direction."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,10 +113,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The overall size of the document rather than just a simple set distance, aka the union."
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -113,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +158,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -152,15 +166,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['hello', 'Bob', 'is', 'name', 'my', 'Alice']\n",
-      "[1, 0, 1, 1, 1, 1]\n"
+      "['Alice', 'name', 'is', 'hello', 'my', 'Bob']\n",
+      "[1, 1, 1, 1, 1, 0]\n"
      ]
     }
    ],
@@ -181,12 +195,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Alice', 'Bob', 'Claude', 'hello', 'hi', 'is', 'my', 'name']\n",
+      "[0, 0, 1, 0, 1, 1, 1, 1]\n",
+      "[0, 1, 0, 1, 0, 1, 1, 1]\n",
+      "[1, 0, 0, 1, 0, 1, 1, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "s3 = \"hi my name is Claude\"\n",
-    "corpus.append(s3)"
+    "corpus.append(s3)\n",
+    "\n",
+    "all_words = sorted(list(set([item for x in corpus for item in x.split()])))\n",
+    "print(all_words)\n",
+    "v3 = [1 if x in s3 else 0 for x in all_words]\n",
+    "print(v3)\n",
+    "v2 = [1 if x in s2 else 0 for x in all_words]\n",
+    "print(v2)\n",
+    "v1 = [1 if x in s1 else 0 for x in all_words]\n",
+    "print(v1)"
    ]
   },
   {
@@ -197,14 +231,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "    ['Alice', 'Bob', 'Claude', 'hello', 'hi', 'is', 'my', 'name']\n",
+    "    \n",
+    "    beware the words are sorted"
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -212,11 +247,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "    s3 [0, 0, 1, 0, 1, 1, 1, 1]\n",
+    "    s2 [0, 1, 0, 1, 0, 1, 1, 1]\n",
+    "    s1 [1, 0, 0, 1, 0, 1, 1, 1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -227,15 +264,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3706099233.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[6], line 3\u001b[1;36m\u001b[0m\n\u001b[1;33m    output =\u001b[0m\n\u001b[1;37m             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "def manDist(vec1, vec2):\n",
+    "    # space to write new list\n",
+    "    output = \n",
+    "    \n",
+    "    if len(vec1) is not len(vec2):\n",
+    "        print(\"error, must be same dimension\")\n",
+    "    else:\n",
+    "        for elem in range(len(vec1)):\n",
+    "            # XORing\n",
+    "            output[elem] = vec1[elem] ^ vec2[elem]\n",
+    "    \n",
+    "    return sum(output)\n",
+    "\n",
+    "print(manDist(v1, v2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# just keep a runnig total of differences\n",
+    "\n",
+    "def manDist(vec1, vec2):\n",
+    "    total = 0\n",
+    "    \n",
+    "    if len(vec1) is not len(vec2):\n",
+    "        print(\"error, must be same dimension\")\n",
+    "    else:\n",
+    "        for elem in range(len(vec1)):\n",
+    "            # XORing\n",
+    "            total += vec1[elem] ^ vec2[elem]\n",
+    "    \n",
+    "    return total\n",
+    "\n",
+    "print(manDist(v1, v2))\n",
+    "print(manDist(v1, v3))\n",
+    "print(manDist(v2, v3))"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "V1 and V2 are most similar"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -252,10 +350,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Alice', 'Bob', 'Claude', 'hello', 'hi', 'is', 'my', 'name']\n",
+      "[1, 0, 0, 0, 1, 0, 0, 0]\n",
+      "[0, 0, 1, 1, 0, 0, 0, 0]\n",
+      "[0, 1, 1, 0, 0, 1, 1, 1]\n",
+      "[1, 0, 1, 0, 1, 1, 1, 1]\n",
+      "[0, 1, 0, 1, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "s4 = \"hi Alice\"\n",
+    "s5 = \"hello Claude\"\n",
+    "s6 = \"Bob my name is Claude\"\n",
+    "s7 = \"hi Claude my name is Alice\"\n",
+    "s8 = \"hello Bob\"\n",
+    "\n",
+    "corpus.append(s4)\n",
+    "corpus.append(s5)\n",
+    "corpus.append(s6)\n",
+    "corpus.append(s7)\n",
+    "corpus.append(s8)\n",
+    "\n",
+    "all_words = sorted(list(set([item for x in corpus for item in x.split()])))\n",
+    "print(all_words)\n",
+    "\n",
+    "v4 = [1 if x in s4 else 0 for x in all_words]\n",
+    "print(v4)\n",
+    "v5 = [1 if x in s5 else 0 for x in all_words]\n",
+    "print(v5)\n",
+    "v6 = [1 if x in s6 else 0 for x in all_words]\n",
+    "print(v6)\n",
+    "v7 = [1 if x in s7 else 0 for x in all_words]\n",
+    "print(v7)\n",
+    "v8 = [1 if x in s8 else 0 for x in all_words]\n",
+    "print(v8)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -265,14 +402,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "5 by 7"
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -280,19 +416,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "\"Hello Claude\" and \"Hello Bob\""
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -327,7 +457,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Grouping of (0, 0.5) and (1.5, 2, 6, 6.5, 7)\n",
+    "\n",
+    "New centroids 0.25 and 5\n",
+    "\n",
+    "Grouping of (0, 0.5, 1.5, 2) and (6, 6.5, 7)\n",
+    "\n",
+    "New centroids at 1 and 6.5\n",
+    "\n",
+    "Same groupings and same centroids.\n",
+    "\n",
+    "Done!"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -339,7 +481,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The cost function is just the distance from the centers."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -351,7 +495,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Because there could be something analogous to a local minimum that the Lloyd's algorithm could fall into, being a greedy algorithm. Therefore there can be different solutions or clusterings, neither necissarily wrong."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -363,12 +509,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Yes, it always converges, it's just minimizing the distances as quickly as possible."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -382,9 +530,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (main, Dec  7 2022, 00:00:00) [GCC 12.2.1 20221121 (Red Hat 12.2.1-4)]"
+   "version": "3.10.8"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
