--- a/worksheets/worksheet_05.ipynb
+++ b/worksheets/worksheet_05.ipynb
@@ -1,13 +1,13 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Worksheet 05\n",
     "\n",
-    "Name:  \n",
+    "Name: Daniel Celaj\n",
+    "\n",
     "UID: \n",
     "\n",
     "### Topics\n",
@@ -17,7 +17,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -29,10 +28,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "K means ++ initialization is a mix of random center and furthest distance. We start with a random center like with k means and then pick the next ones with prob D(x)^a"
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -42,10 +42,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "It tends to favor clusters of similar sizes and doesn't do too well with varying densities. It also doesn't do well with non-glob like shapes (spherical gaussians), since we optimize for proximity to center of mass. It wont do too well with two distinct curves intertwining."
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -76,10 +77,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "2 clusters seems like the optimal choice considering the S score is high (meaning the distance between clusters is high and within clusters is low)"
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -104,19 +106,18 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 1\n",
+    "Step 1 \n",
     "\n",
     "|   | A | B | C | D | E |\n",
     "|---|---|---|---|---|---|\n",
-    "| A | 0 |   |   |   |   |\n",
-    "| B |   | 0 |   |   |   |\n",
-    "| C |   |   | 0 |   |   |\n",
-    "| D |   |   |   | 0 |   |\n",
-    "| E |   |   |   |   | 0 |"
+    "| A | 0 | √2 | 3 | 1 | √8 |\n",
+    "| B | √2 | 0 | √5 | 1 | √2 |\n",
+    "| C | 3 | √5 | 0 | √10 | √5 |\n",
+    "| D | 1 | 1 | √10 | 0 | √5 |\n",
+    "| E | √8 | √2 | √5 | √5 | 0 |"
    ]
   },
   {
@@ -125,12 +126,12 @@
    "source": [
     "Step 2\n",
     "\n",
-    "|   |   |   |   |   |\n",
+    "|   | AD | B | C | E |\n",
     "|---|---|---|---|---|\n",
-    "|   | 0 |   |   |   |\n",
-    "|   |   | 0 |   |   |\n",
-    "|   |   |   | 0 |   |\n",
-    "|   |   |   |   | 0 |"
+    "| AD | 0 | 1 | 3 | √5 |\n",
+    "| B | 1 | 0 | √5 | √2 |\n",
+    "| C | 3 | √5 | 0 | √5 |\n",
+    "| E | √5 | √2 | √5 | 0 |"
    ]
   },
   {
@@ -139,11 +140,11 @@
    "source": [
     "Step 3\n",
     "\n",
-    "|   |   |   |   |\n",
+    "|   | ABD | E | C |\n",
     "|---|---|---|---|\n",
-    "|   | 0 |   |   |\n",
-    "|   |   | 0 |   |\n",
-    "|   |   |   | 0 |"
+    "| ABD | 0 | √2 | √5 |\n",
+    "| E | √2 | 0 | √5 |\n",
+    "| C | √5 | √5 | 0 |"
    ]
   },
   {
@@ -152,10 +153,10 @@
    "source": [
     "Step 4\n",
     "\n",
-    "|   |   |   |\n",
+    "|   | ABDE | C |\n",
     "|---|---|---|\n",
-    "|   | 0 |   |\n",
-    "|   |   | 0 |"
+    "| ABDE | 0 | √5 |\n",
+    "| C | √5 | 0 |"
    ]
   },
   {
@@ -172,29 +173,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 1\n",
+    "Step 1 (Complete Linkage)\n",
     "\n",
     "|   | A | B | C | D | E |\n",
     "|---|---|---|---|---|---|\n",
-    "| A | 0 |   |   |   |   |\n",
-    "| B |   | 0 |   |   |   |\n",
-    "| C |   |   | 0 |   |   |\n",
-    "| D |   |   |   | 0 |   |\n",
-    "| E |   |   |   |   | 0 |"
+    "| A | 0 | √2 | 3 | 1 | √8 |\n",
+    "| B | √2 | 0 | √5 | 1 | √2 |\n",
+    "| C | 3 | √5 | 0 | √10 | √5 |\n",
+    "| D | 1 | 1 | √10 | 0 | √5 |\n",
+    "| E | √8 | √2 | √5 | √5 | 0 |"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 2\n",
+    "Step 2 (Could have also grouped B and E instead, it was a tie)\n",
     "\n",
-    "|   |   |   |   |   |\n",
+    "|   | AD | B | C | E |\n",
     "|---|---|---|---|---|\n",
-    "|   | 0 |   |   |   |\n",
-    "|   |   | 0 |   |   |\n",
-    "|   |   |   | 0 |   |\n",
-    "|   |   |   |   | 0 |"
+    "| AD | 0 | √2 | √10 | √8 |\n",
+    "| B | √2 | 0 | √5 | √2 |\n",
+    "| C | √10 | √5 | 0 | √5 |\n",
+    "| E | √8 | √2 | √5 | 0 |"
    ]
   },
   {
@@ -203,11 +204,11 @@
    "source": [
     "Step 3\n",
     "\n",
-    "|   |   |   |   |\n",
+    "|   | ABD | E | C |\n",
     "|---|---|---|---|\n",
-    "|   | 0 |   |   |\n",
-    "|   |   | 0 |   |\n",
-    "|   |   |   | 0 |"
+    "| ABD | 0 | √8 | √10 |\n",
+    "| E | √8 | 0 | √5 |\n",
+    "| C | √10 | √5 | 0 |"
    ]
   },
   {
@@ -216,24 +217,38 @@
    "source": [
     "Step 4\n",
     "\n",
-    "|   |   |   |\n",
+    "|   | ABD | EC |\n",
     "|---|---|---|\n",
-    "|   | 0 |   |\n",
-    "|   |   | 0 |"
+    "| ABD | 0 | √8 |\n",
+    "| EC | √8 | 0 |"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.1"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
