--- a/labs/03-lab/lab03.ipynb
+++ b/labs/03-lab/lab03.ipynb
@@ -5,6 +5,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Caroline Sullivan\n",
+    "## 2/14/23"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Lab 03: KMeans, Clustering, and Distance Metrics\n",
     "\n",
     "In this lab, you will be learning how to use the KMeans algorithm to cluster data and how to use distance metrics to measure the similarity between data points. You will also implement the KMeans algorithm with the provided methods and distance metric methods.\n",
@@ -14,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +75,15 @@
     "    \n",
     "    Returns a new point which is the center of all the points.\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    cent = []\n",
+    " \n",
+    "    for i in range(len(points[0])):\n",
+    "        dim = []\n",
+    "        for point in points:\n",
+    "            dim.append(point[i])\n",
+    "        cent.append(sum(dim)/len(dim))        \n",
+    "\n",
+    "    return cent\n",
     "\n",
     "def get_centroids(dataset, assignments):\n",
     "    \"\"\"\n",
@@ -75,7 +92,14 @@
     "    Compute the centroid for each of the assigned groups.\n",
     "    Return `k` centroids in a list\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    clusters = defaultdict(list)\n",
+    "    for assignment, point in zip(assignments, dataset):\n",
+    "        clusters[assignment].append(point)\n",
+    "    centroids = []\n",
+    "    for cluster in clusters.values():\n",
+    "        centroids.append(get_centroid(cluster))\n",
+    "\n",
+    "    return centroids\n",
     "\n",
     "def assign_points(data_points, centers):\n",
     "    \"\"\"\n",
@@ -89,24 +113,41 @@
     "    \"\"\"\n",
     "    Returns the Euclidean distance between a and b\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    if len(a) != len(b):\n",
+    "        raise ValueError('Points must be in the same dimension')\n",
+    "    return (sum([(a[i]-b[i]) ** 2 for i in range(len(a))]))**(1/2)\n",
     "\n",
     "def distance_squared(a, b):\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    if len(a) != len(b):\n",
+    "        raise ValueError('Points must be in the same dimension')\n",
+    "    return sum([(a[i]-b[i]) ** 2 for i in range(len(a))])\n",
     "\n",
     "def cost_function(clustering):\n",
     "    \"\"\"\n",
     "    Accepts a clustering as a dictionary of lists of points.\n",
     "    Returns the cost of the clustering.\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    cost = 0\n",
+    "    for assignment, cluster in clustering.items():\n",
+    "        print(assignment)\n",
+    "        print(cluster)\n",
+    "        cluster_cost = 0\n",
+    "        centroid = get_centroid(cluster)\n",
+    "        for point in cluster:\n",
+    "            cluster_cost += distance_squared(centroid, point)\n",
+    "        cost += cluster_cost\n",
+    "        \n",
+    "    return cost\n",
     "\n",
     "def generate_k(dataset, k):\n",
     "    \"\"\"\n",
     "    Given `data_set`, which is an array of arrays,\n",
     "    return a random set of k points from the data_set\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    random_set = []\n",
+    "    for i in range(k):\n",
+    "        random_set.append(random.choice(dataset))\n",
+    "    return random_set\n",
     "\n",
     "def generate_k_pp(dataset, k):\n",
     "    \"\"\"\n",
@@ -115,7 +156,27 @@
     "    where points are picked with a probability proportional\n",
     "    to their distance as per kmeans pp\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    random_set = []\n",
+    "\n",
+    "    # put first centroid in\n",
+    "    first_centroid = random.choice(dataset)\n",
+    "    random_set.append(first_centroid)\n",
+    "    points_left = dataset.remove(first_centroid)\n",
+    "\n",
+    "    # get probabilities of picking any other point\n",
+    "    # we need to add k-1 more centroids\n",
+    "    for i in range(k-1):\n",
+    "        # keep track of the distances \n",
+    "        # and probabilities for each point left\n",
+    "        distances = []\n",
+    "        probabilities = []\n",
+    "        for point in points_left:\n",
+    "            # calculate distance between point and centroids already chosen\n",
+    "            # turn them into probabilites\n",
+    "            # use random.choices to pick from the remaining points with weights\n",
+    "            # continue through the loop\n",
+    "\n",
+    "    return None\n",
     "\n",
     "def _do_lloyds_algo(dataset, k_points):\n",
     "    assignments = assign_points(dataset, k_points)\n",
@@ -164,9 +225,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'read_csv' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 147\u001b[0m\n\u001b[0;32m    144\u001b[0m     \u001b[39massert\u001b[39;00m clustered\u001b[39m.\u001b[39msort() \u001b[39m==\u001b[39m [expected_clustering1, expected_clustering2, expected_clustering3]\u001b[39m.\u001b[39msort()\n\u001b[0;32m    146\u001b[0m \u001b[39m#testing methods\u001b[39;00m\n\u001b[1;32m--> 147\u001b[0m test_kmeans_when_k_is_1()\n\u001b[0;32m    148\u001b[0m test_kmeans_when_k_is_2()\n\u001b[0;32m    149\u001b[0m test_kmeans_when_k_is_3()\n",
+      "Cell \u001b[1;32mIn[1], line 20\u001b[0m, in \u001b[0;36mtest_kmeans_when_k_is_1\u001b[1;34m()\u001b[0m\n\u001b[0;32m     17\u001b[0m datasetPath \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m../tests/test_files/dataset_1.csv\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m     19\u001b[0m random\u001b[39m.\u001b[39mseed(\u001b[39m1\u001b[39m)\n\u001b[1;32m---> 20\u001b[0m dataset \u001b[39m=\u001b[39m read_csv(datasetPath)\n\u001b[0;32m     21\u001b[0m expected_clustering \u001b[39m=\u001b[39m dataset\n\u001b[0;32m     22\u001b[0m clustering \u001b[39m=\u001b[39m k_means(dataset\u001b[39m=\u001b[39mdataset, k\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'read_csv' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#DO NOT MODIFY THIS CELL!!!!\n",
     "\n",
@@ -491,7 +565,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -505,12 +579,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "63639127d0784e8e4de1a76bcacd89583be09d9f82d600966cd9457d183cbbf7"
+    "hash": "93626ebdf6b37739e4ac5700c0dba13041517f6c4b50580fe5c850e4df425864"
    }
   }
  },
