--- a/worksheets/worksheet_05.ipynb
+++ b/worksheets/worksheet_05.ipynb
@@ -76,7 +76,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "I will choose 2 clusters because the mean silhouette score is the greatest among all the pictures.\n"
+   ]
   },
   {
    "cell_type": "markdown",
