--- a/worksheets/worksheet_05.ipynb
+++ b/worksheets/worksheet_05.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 05\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Youheng Yang\\\n",
+    "UID: U45006780\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -27,9 +27,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "K means ++ chooses the centroid with a probability proportion to D(x)^a where a = 2 while K means has an a = 0 which means all centroids are chose randomly"
+   ]
   },
   {
    "attachments": {},
@@ -40,9 +43,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- It prefer to custer into groups that have the similar size\n",
+    "- It cannot custer something that has a specific/irregular shape"
+   ]
   },
   {
    "attachments": {},
@@ -74,9 +81,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "I will choose K = 2 because its silhouette score is relatively hightest which means the cluster is more fitable."
+   ]
   },
   {
    "attachments": {},
@@ -112,50 +122,53 @@
     "\n",
     "|   | A | B | C | D | E |\n",
     "|---|---|---|---|---|---|\n",
-    "| A | 0 |   |   |   |   |\n",
-    "| B |   | 0 |   |   |   |\n",
-    "| C |   |   | 0 |   |   |\n",
-    "| D |   |   |   | 0 |   |\n",
-    "| E |   |   |   |   | 0 |"
+    "| A | 0 | $\\sqrt 2$ | 3 | 1 | $2\\sqrt 2$ |\n",
+    "| B | $\\sqrt 2$ | 0 | $\\sqrt 5$ | 1 | $\\sqrt 2$ |\n",
+    "| C | 3 | $\\sqrt 5$ | 0 | $\\sqrt 10$ | $\\sqrt 5$ |\n",
+    "| D | 1 | 1 | $\\sqrt 10$ | 0 | $\\sqrt 5$ |\n",
+    "| E | $2\\sqrt 2$ | $\\sqrt 2$ | $\\sqrt 5$ | $\\sqrt 5$ | 0 |"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Step 2\n",
     "\n",
-    "|   |   |   |   |   |\n",
+    "|   | A&D | B | C | E |\n",
     "|---|---|---|---|---|\n",
-    "|   | 0 |   |   |   |\n",
-    "|   |   | 0 |   |   |\n",
-    "|   |   |   | 0 |   |\n",
-    "|   |   |   |   | 0 |"
+    "| A&D | 0 | 1 | 3 | $\\sqrt 5$ |\n",
+    "| B | 1 | 0 | $\\sqrt 5$ | $\\sqrt 2$ |\n",
+    "| C | 3 | $\\sqrt 5$ | 0 | $\\sqrt 5$ |\n",
+    "| E | $\\sqrt 5$ | $\\sqrt 2$ | $\\sqrt 5$ | 0 |"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Step 3\n",
     "\n",
-    "|   |   |   |   |\n",
+    "|   | A&B&D | C | E |\n",
     "|---|---|---|---|\n",
-    "|   | 0 |   |   |\n",
-    "|   |   | 0 |   |\n",
-    "|   |   |   | 0 |"
+    "| A&B&D | 0 | $\\sqrt 5$ | $\\sqrt 2$ |\n",
+    "| C | $\\sqrt 5$ | 0 | $\\sqrt 5$ |\n",
+    "| E | $\\sqrt 2$ | $\\sqrt 5$ | 0 |"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Step 4\n",
     "\n",
-    "|   |   |   |\n",
+    "|   | A&B&D&E | C |\n",
     "|---|---|---|\n",
-    "|   | 0 |   |\n",
-    "|   |   | 0 |"
+    "| A&B&D&E | 0 | $\\sqrt 5$ |\n",
+    "| C | $\\sqrt 5$ | 0 |"
    ]
   },
   {
@@ -169,6 +182,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -176,50 +190,53 @@
     "\n",
     "|   | A | B | C | D | E |\n",
     "|---|---|---|---|---|---|\n",
-    "| A | 0 |   |   |   |   |\n",
-    "| B |   | 0 |   |   |   |\n",
-    "| C |   |   | 0 |   |   |\n",
-    "| D |   |   |   | 0 |   |\n",
-    "| E |   |   |   |   | 0 |"
+    "| A | 0 | $\\sqrt 2$ | 3 | 1 | $2\\sqrt 2$ |\n",
+    "| B | $\\sqrt 2$ | 0 | $\\sqrt 5$ | 1 | $\\sqrt 2$ |\n",
+    "| C | 3 | $\\sqrt 5$ | 0 | $\\sqrt 10$ | $\\sqrt 5$ |\n",
+    "| D | 1 | 1 | $\\sqrt 10$ | 0 | $\\sqrt 5$ |\n",
+    "| E | $2\\sqrt 2$ | $\\sqrt 2$ | $\\sqrt 5$ | $\\sqrt 5$ | 0 |"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Step 2\n",
     "\n",
-    "|   |   |   |   |   |\n",
+    "|   | A&D | B | C | E |\n",
     "|---|---|---|---|---|\n",
-    "|   | 0 |   |   |   |\n",
-    "|   |   | 0 |   |   |\n",
-    "|   |   |   | 0 |   |\n",
-    "|   |   |   |   | 0 |"
+    "| A&D | 0 | $\\sqrt 2$ | $\\sqrt 10$ | $2\\sqrt 2$ |\n",
+    "| B | $\\sqrt 2$ | 0 | $\\sqrt 5$ | $\\sqrt 2$ |\n",
+    "| C | $\\sqrt 10$ | $\\sqrt 5$ | 0 | $\\sqrt 5$ |\n",
+    "| E | $2\\sqrt 2$ | $\\sqrt 2$ | $\\sqrt 5$ | 0 |"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Step 3\n",
     "\n",
-    "|   |   |   |   |\n",
+    "|   | A&B&D | C | E |\n",
     "|---|---|---|---|\n",
-    "|   | 0 |   |   |\n",
-    "|   |   | 0 |   |\n",
-    "|   |   |   | 0 |"
+    "| A&B&D | 0 | $\\sqrt 10$ | $2\\sqrt 2$ |\n",
+    "| C | $\\sqrt 10$ | 0 | $\\sqrt 5$ |\n",
+    "| E | $2\\sqrt 2$ | $\\sqrt 5$ | 0 |"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Step 4\n",
     "\n",
-    "|   |   |   |\n",
+    "|   | A&B&D&E | C |\n",
     "|---|---|---|\n",
-    "|   | 0 |   |\n",
-    "|   |   | 0 |"
+    "| A&B&D&E | 0 | $\\sqrt 10$ |\n",
+    "| C | $\\sqrt 10$ | 0 |"
    ]
   }
  ],
@@ -231,12 +248,12 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.11.1"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
