--- a/labs/03-lab/lab03.ipynb
+++ b/labs/03-lab/lab03.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -14,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +32,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -41,7 +39,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -50,12 +47,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
     "from collections import defaultdict\n",
-    "from math import inf\n",
+    "import math \n",
     "import random\n",
     "import csv\n",
     "\n",
@@ -66,7 +63,18 @@
     "    \n",
     "    Returns a new point which is the center of all the points.\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    center = [0 for i in range(len(points[0]))]\n",
+    " \n",
+    "    for point in points:\n",
+    "        for coord in range(len(point)):\n",
+    "            center[coord] += point[coord]\n",
+    "    \n",
+    "    for i in range(len(center)):\n",
+    "        center[i] /= len(points)\n",
+    "    \n",
+    "#     print(center)\n",
+    "    return center\n",
+    "#     return NotImplementedError(\"Implement this function\")\n",
     "\n",
     "def get_centroids(dataset, assignments):\n",
     "    \"\"\"\n",
@@ -75,7 +83,19 @@
     "    Compute the centroid for each of the assigned groups.\n",
     "    Return `k` centroids in a list\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    \n",
+    "    centroids = []\n",
+    "    centers = {}\n",
+    "    for i in range(len(dataset)):\n",
+    "        if assignments[i] not in centers:\n",
+    "            centers[assignments[i]] = []\n",
+    "        centers[assignments[i]].append(dataset[i])\n",
+    "    \n",
+    "    for i in centers:\n",
+    "        centroids.append(get_centroid(centers[i]))\n",
+    "\n",
+    "    return centroids\n",
+    "#     return NotImplementedError(\"Implement this function\")\n",
     "\n",
     "def assign_points(data_points, centers):\n",
     "    \"\"\"\n",
@@ -91,24 +111,43 @@
     "    \"\"\"\n",
     "    Returns the Euclidean distance between a and b\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "#     print(a,b)|\n",
+    "    \n",
+    "    sum_ = 0\n",
+    "    for i in range(len(a)):\n",
+    "        sum_ += (a[i] - b[i])**2\n",
+    "    \n",
+    "    return math.sqrt(sum_)\n",
+    "\n",
     "\n",
     "def distance_squared(a, b):\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "\n",
+    "    \n",
+    "    return distance(a,b)**2\n",
+    "#     return NotImplementedError(\"Implement this function\")\n",
     "\n",
     "def cost_function(clustering):\n",
     "    \"\"\"\n",
     "    Accepts a clustering as a dictionary of lists of points.\n",
     "    Returns the cost of the clustering.\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    cost_ = 0\n",
+    "#     print(clustering.keys())  \n",
+    "    for center in clustering:\n",
+    "        for point in clustering[center]:\n",
+    "            cost_ += distance_squared(point,get_centroid(clustering[center]))\n",
+    "    return cost_\n",
+    "#     return NotImplementedError(\"Implement this function\")\n",
     "\n",
     "def generate_k(dataset, k):\n",
     "    \"\"\"\n",
     "    Given `data_set`, which is an array of arrays,\n",
     "    return a random set of k points from the data_set\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    return random.sample(dataset, k)\n",
+    "    \n",
+    "    \n",
+    "#     return NotImplementedError(\"Implement this function\")\n",
     "\n",
     "def generate_k_pp(dataset, k):\n",
     "    \"\"\"\n",
@@ -117,7 +156,15 @@
     "    where points are picked with a probability proportional\n",
     "    to their distance as per kmeans pp\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    points = generate_k(dataset,1)\n",
+    "    \n",
+    "#     print(points)\n",
+    "    for rest_ in range(k-1):\n",
+    "        points.append(max(dataset, key = lambda i: distance_squared(points[-1],i )))\n",
+    "\n",
+    "#     print(points)\n",
+    "    return points\n",
+    "#     return NotImplementedError(\"Implement this function\")\n",
     "\n",
     "def _do_lloyds_algo(dataset, k_points):\n",
     "    assignments = assign_points(dataset, k_points)\n",
@@ -149,7 +196,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -157,7 +203,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -166,9 +211,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_kmeans_when_k_is_1 passed!\n",
+      "test_kmeans_when_k_is_2 passed!\n",
+      "test_kmeans_when_k_is_3 passed!\n",
+      "test_kmeans_pp_when_k_is_2 passed!\n",
+      "test_kmeans_pp_when_k_is_3 passed!\n"
+     ]
+    }
+   ],
    "source": [
     "#DO NOT MODIFY THIS CELL!!!!\n",
     "\n",
@@ -336,7 +393,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -344,7 +400,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -357,7 +412,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -366,25 +420,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "def euclidean_dist(x, y):\n",
+    "    if len(x)!=len(y):\n",
+    "        raise ValueError(\"lengths must be equal\")\n",
+    "    if len(x) == 0 or len(y) == 0:\n",
+    "        raise  ValueError(\"lengths must not be zero\")\n",
+    "    \n",
+    "    sum_ = 0\n",
+    "    for i in range(len(x)):\n",
+    "        sum_ += (x[i] - y[i])**2\n",
+    "    return sqrt(sum_)\n",
+    "#     return \n",
     "    return NotImplementedError(\"Implement this method\")\n",
     "\n",
     "def manhattan_dist(x, y):\n",
-    "    return NotImplementedError(\"Implement this method\")\n",
+    "    if len(x)!=len(y):\n",
+    "        raise ValueError(\"lengths must be equal\")\n",
+    "    if len(x) == 0 or len(y) == 0:\n",
+    "        raise  ValueError(\"lengths must not be zero\")\n",
+    "    \n",
+    "    sum_ = 0\n",
+    "    for i in range(len(x)):\n",
+    "        sum_ += abs(x[i] - y[i])\n",
+    "    return sum_\n",
+    "#     return NotImplementedError(\"Implement this method\")\n",
     "\n",
     "def jaccard_dist(x, y):\n",
-    "    return NotImplementedError(\"Implement this method\")\n",
     "\n",
+    "    if len(x) == 0 or len(y) == 0:\n",
+    "        raise  ValueError(\"lengths must not be zero\")\n",
+    "    intersection = (set(x).intersection(y))\n",
+    "    union = set(x).union(set(y))\n",
+    "    return 1- len(intersection)/len(union)\n",
+    "def mag(x):\n",
+    "    sum_ = 0\n",
+    "    for i in x:\n",
+    "        sum_ += i*i\n",
+    "    return sum_\n",
+    "\n",
+    "def mul(x,y):\n",
+    "    sum_ = 0\n",
+    "    for i in range(len(x)):\n",
+    "        sum_ += x[i]*y[i]\n",
+    "    return sum_\n",
     "def cosine_sim(x, y):\n",
-    "    return NotImplementedError(\"Implement this method\")"
+    "    if len(x)!=len(y):\n",
+    "        raise ValueError(\"lengths must be equal\")\n",
+    "    if len(x) == 0 or len(y) == 0:\n",
+    "        raise  ValueError(\"lengths must not be zero\")\n",
+    "    return mul(x,y)/(mag(x)*mag(y))\n",
+    "#     return NotImplementedError(\"Implement this method\")"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -395,9 +488,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "euclidean_dist is right!\n",
+      "manhattan_dist is right!\n",
+      "cosine_sim is right!\n",
+      "jaccard_dist is right!\n"
+     ]
+    }
+   ],
    "source": [
     "def _generate_rand_point(dimension):\n",
     "    return [random.randrange(1, 1000, 1) for i in range(dimension)]\n",
@@ -507,11 +611,32 @@
     "test_cosine()\n",
     "test_jaccard()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -525,9 +650,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.7"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "63639127d0784e8e4de1a76bcacd89583be09d9f82d600966cd9457d183cbbf7"
