--- a/labs/03-lab/lab03.ipynb
+++ b/labs/03-lab/lab03.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,12 +50,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from collections import defaultdict\n",
-    "from math import inf\n",
+    "from math import inf, sqrt\n",
     "import random\n",
     "import csv\n",
     "\n",
@@ -66,7 +66,14 @@
     "    \n",
     "    Returns a new point which is the center of all the points.\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    n = len(points[0])\n",
+    "    centroid = [0] * n\n",
+    "    for point in points:\n",
+    "        for i in range(n):\n",
+    "            centroid[i] += point[i]\n",
+    "    for i in range(n):\n",
+    "        centroid[i] /= len(points)\n",
+    "    return centroid\n",
     "\n",
     "def get_centroids(dataset, assignments):\n",
     "    \"\"\"\n",
@@ -75,7 +82,11 @@
     "    Compute the centroid for each of the assigned groups.\n",
     "    Return `k` centroids in a list\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    clustering = defaultdict(list)\n",
+    "    for assignment, point in zip(assignments, dataset):\n",
+    "        clustering[assignment].append(point)\n",
+    "    return [get_centroid(clustering[i]) for i in range(len(clustering))]\n",
+    "\n",
     "\n",
     "def assign_points(data_points, centers):\n",
     "    \"\"\"\n",
@@ -91,24 +102,28 @@
     "    \"\"\"\n",
     "    Returns the Euclidean distance between a and b\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    return sqrt(sum([(ai - bi) ** 2 for ai, bi in zip(a, b)]))\n",
     "\n",
     "def distance_squared(a, b):\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    return sum([(ai - bi) ** 2 for ai, bi in zip(a, b)])\n",
     "\n",
     "def cost_function(clustering):\n",
     "    \"\"\"\n",
     "    Accepts a clustering as a dictionary of lists of points.\n",
     "    Returns the cost of the clustering.\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    cost = 0\n",
+    "    for cluster in clustering.values():\n",
+    "        centroid = get_centroid(cluster)\n",
+    "        cost += sum([distance_squared(point, centroid) for point in cluster])\n",
+    "    return cost\n",
     "\n",
     "def generate_k(dataset, k):\n",
     "    \"\"\"\n",
     "    Given `data_set`, which is an array of arrays,\n",
     "    return a random set of k points from the data_set\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    return random.sample(dataset, k)\n",
     "\n",
     "def generate_k_pp(dataset, k):\n",
     "    \"\"\"\n",
@@ -117,7 +132,19 @@
     "    where points are picked with a probability proportional\n",
     "    to their distance as per kmeans pp\n",
     "    \"\"\"\n",
-    "    return NotImplementedError(\"Implement this function\")\n",
+    "    n = len(dataset)\n",
+    "    centers = [random.choice(dataset)]\n",
+    "    while len(centers) < k:\n",
+    "        distances = [min([distance(point, center) ** 2 for center in centers]) for point in dataset]\n",
+    "        prob_distribution = [distance ** 2 / sum(distances) for distance in distances]\n",
+    "        cum_prob = [sum(prob_distribution[:i+1]) for i in range(n)]\n",
+    "        r = random.random()\n",
+    "        for i, prob in enumerate(cum_prob):\n",
+    "            if r < prob:\n",
+    "                centers.append(dataset[i])\n",
+    "                break\n",
+    "    return centers\n",
+    "\n",
     "\n",
     "def _do_lloyds_algo(dataset, k_points):\n",
     "    assignments = assign_points(dataset, k_points)\n",
@@ -166,9 +193,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_kmeans_when_k_is_1 passed!\n",
+      "test_kmeans_when_k_is_2 passed!\n",
+      "test_kmeans_when_k_is_3 passed!\n",
+      "test_kmeans_pp_when_k_is_2 passed!\n",
+      "test_kmeans_pp_when_k_is_3 passed!\n"
+     ]
+    }
+   ],
    "source": [
     "#DO NOT MODIFY THIS CELL!!!!\n",
     "\n",
@@ -366,21 +405,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import math\n",
+    "\n",
     "def euclidean_dist(x, y):\n",
-    "    return NotImplementedError(\"Implement this method\")\n",
+    "    return math.sqrt(sum((xi - yi) ** 2 for xi, yi in zip(x, y)))\n",
     "\n",
     "def manhattan_dist(x, y):\n",
-    "    return NotImplementedError(\"Implement this method\")\n",
+    "    return sum(abs(xi - yi) for xi, yi in zip(x, y))\n",
     "\n",
     "def jaccard_dist(x, y):\n",
-    "    return NotImplementedError(\"Implement this method\")\n",
+    "    if len(x) == 0 and len(y) == 0:\n",
+    "        return 0\n",
+    "    return 1 - len(set(x).intersection(set(y))) / len(set(x).union(set(y)))\n",
     "\n",
     "def cosine_sim(x, y):\n",
-    "    return NotImplementedError(\"Implement this method\")"
+    "    dot_product = sum(xi * yi for xi, yi in zip(x, y))\n",
+    "    magnitude_x = math.sqrt(sum(xi ** 2 for xi in x))\n",
+    "    magnitude_y = math.sqrt(sum(yi ** 2 for yi in y))\n",
+    "    if magnitude_x == 0 or magnitude_y == 0:\n",
+    "        return 0\n",
+    "    return dot_product / (magnitude_x * magnitude_y)"
    ]
   },
   {
@@ -395,9 +443,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "euclidean_dist is right!\n",
+      "manhattan_dist is right!\n",
+      "cosine_sim is right!\n",
+      "jaccard_dist is right!\n"
+     ]
+    }
+   ],
    "source": [
     "def _generate_rand_point(dimension):\n",
     "    return [random.randrange(1, 1000, 1) for i in range(dimension)]\n",
@@ -525,12 +584,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "63639127d0784e8e4de1a76bcacd89583be09d9f82d600966cd9457d183cbbf7"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
